infrastructure/gateway/myrobertson-com/myrobertson-com-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: myrobertson-com-gateway
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: myrobertson.com
    cert-manager.io/issuer: letsencrypt-prod
spec:
  gatewayClassName: istio
  listeners:

  - name: apex-http
    hostname: myrobertson.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

  - name: apex-https
    hostname: myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: myrobertson-com-cert
        kind: Secret

  - name: auth
    hostname: auth.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: auth-myrobertson-com-cert
        kind: Secret 

  - name: bitwarden
    hostname: bitwarden.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: bitwarden-myrobertson-com-cert
        kind: Secret 

  - name: kermit
    hostname: kermit.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: kermit-myrobertson-com-cert
        kind: Secret 

  - name: gotify
    hostname: gotify.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: gotify-myrobertson-com-cert
        kind: Secret 

  - name: immich
    hostname: immich.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: immich-myrobertson-com-cert
        kind: Secret 

  - name: jellyfin
    hostname: jellyfin.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: jellyfin-myrobertson-com-cert
        kind: Secret 

  - name: lidarr
    hostname: lidarr.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: lidarr-myrobertson-com-cert
        kind: Secret   

  - name: mealie
    hostname: mealie.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: mealie-myrobertson-com-cert
        kind: Secret 

  - name: overseerr
    hostname: overseerr.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: overseerr-myrobertson-com-cert
        kind: Secret   

  - name: plex
    hostname: plex.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: plex-myrobertson-com-cert
        kind: Secret   

  - name: prowlarr
    hostname: prowlarr.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: prowlarr-myrobertson-com-cert
        kind: Secret   

  - name: radarr
    hostname: radarr.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: radarr-myrobertson-com-cert
        kind: Secret 

  - name: netboot
    hostname: netboot.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: netboot-myrobertson-com-cert
        kind: Secret 

  - name: sonarr
    hostname: sonarr.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: sonarr-myrobertson-com-cert
        kind: Secret 

  - name: syncthing
    hostname: syncthing.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: syncthing-myrobertson-com-cert
        kind: Secret 

  - name: tautulli
    hostname: tautulli.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: tautulli-myrobertson-com-cert
        kind: Secret 

  - name: trilium
    hostname: trilium.myrobertson.com
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: trilium-myrobertson-com-cert
        kind: Secret
